--- a/participate/action.html
+++ b/participate/action.html
@@ -125,6 +125,8 @@
             width: 90%;
             font-size: 1.8rem;
             font-weight: 600;
+            max-width: 70vw;
+            overflow-wrap: break-word;
         }
 
         .options-div {
@@ -231,6 +233,8 @@
             .question {
                 text-align: center;
                 font-size: 1.1rem;
+                max-width: 80vw;
+                overflow-wrap: break-word;
             }
 
             .text {
