--- a/create/main2.html
+++ b/create/main2.html
@@ -99,7 +99,7 @@
                                 <img src="../img/Group 130.svg" alt="" class="history-icon">
                                 <button class="invert-btn home add-event-btn main-button">+ Add Event</button>
                             </div>
-                            <ul class="history-grid collapsible expandable show-action">
+                            <ul class="history-grid collapsible show-action">
                                 <li class="event">
                                     <p><strong>Events</strong></p>
                                     <p><strong>Event Code</strong></p>
