--- a/create/main2.html
+++ b/create/main2.html
@@ -154,10 +154,10 @@
                                     </div>
                                     <label for="question_name">Question</label>
                                     <input type="text" id="question_name" class="main-input"
-                                        placeholder="Enter Question" required>
+                                        placeholder="Enter Question">
                                     <label for="correct_option" >Correct Option</label>
                                     <input type="text" id="correct_option" class="main-input"
-                                        placeholder="Correct Option(must match an option)" required>
+                                        placeholder="Correct Option(must match an option)">
                                     <label for="quiz_options">Options</label>
                                     <div id="quiz_options_div"><input type="text" class="main-input quiz-option"
                                             placeholder="Enter Option"></div>
