--- a/participate/action.html
+++ b/participate/action.html
@@ -21,9 +21,11 @@
             padding: 0;
             font-family: 'Montserrat', sans-serif;
         }
-        .logo-color{
+
+        .logo-color {
             fill: var(--main-color)
         }
+
         body {
             position: relative;
         }
@@ -123,8 +125,6 @@
             width: 90%;
             font-size: 1.8rem;
             font-weight: 600;
-            max-width: 70vw;
-            overflow-wrap: break-word;
         }
 
         .options-div {
@@ -231,8 +231,6 @@
             .question {
                 text-align: center;
                 font-size: 1.1rem;
-                max-width: 80vw;
-                overflow-wrap: break-word;
             }
 
             .text {
@@ -274,6 +272,10 @@
             .not-show {
                 display: none;
             }
+        }
+
+        button::-moz-focus-inner {
+            border: 0;
         }
     </style>
 </head>
