--- a/create/main2.html
+++ b/create/main2.html
@@ -96,7 +96,7 @@
                         </div>
                         <div class="home-result result show-select">
                             <div class="icons show-action">
-                                <img src="../img/Group 130.svg" alt="" class="history-icon">
+                                <img src="../img/Group 130.png" alt="" class="history-icon">
                                 <button class="invert-btn home add-event-btn main-button">+ Add Event</button>
                             </div>
                             <ul class="history-grid collapsible expandable show-action">
