event-loader, review error

--- a/create/main2.html
+++ b/create/main2.html
@@ -74,7 +74,7 @@
                     <div class="content">
                         <div class="home-create create">
                             <button class="invert-btn home back-btn">
-                                <img src="../img/back.png" alt="">
+                                <i class="back-icon material-icons">arrow_back</i>
                             </button>
                             <div class="event-create-container">
                                 <h1>Create Event</h1>
@@ -108,7 +108,7 @@
                                 </li>
                             </ul>
                             <div class="prev-event-deets">
-                                <button class="cancel-event-deets back-btn"><img src="../img/back.png" alt=""></button>
+                                <button class="cancel-event-deets back-btn"><i class="back-icon material-icons">arrow_back</i></button>
                                 <div class="event-contents">
                                     <canvas class="action-graph" id="graph">
 
@@ -123,7 +123,6 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                     <div class="not-logged-in show">
                         Please login to use these features
@@ -132,7 +131,7 @@
                 <div class="tab-content quiz-control">
                     <div class="content">
                         <div class="quiz-result result">
-                            <button class="invert-btn quiz back-btn"><img src="../img/back.png" alt=""></button>
+                            <button class="invert-btn quiz back-btn"><i class="back-icon material-icons">arrow_back</i></button>
                             <canvas class="quiz-details">
 
                             </canvas>
@@ -220,7 +219,7 @@
                                     </div>
                                 </form>
                                 <div class="quiz-summary">
-                                    <button class="back-btn quiz form-btn"><img src="../img/back.png" alt=""></button>
+                                    <button class="back-btn quiz form-btn"><i class="back-icon material-icons">arrow_back</i></button>
                                     <div class="current-quiz-deets">
                                         <h1 class="quiz-title">Quiz title: </h1>
                                         <div class="question-deets first-deet">
@@ -257,7 +256,7 @@
                 <div class="tab-content poll-control">
                     <div class="content">
                         <div class="poll-result result">
-                            <button class="invert-btn poll back-btn"><img src="../img/back.png" alt=""></button>
+                            <button class="invert-btn poll back-btn"><i class="back-icon material-icons">arrow_back</i></button>
                             <canvas class="poll-details">
 
                             </canvas>
@@ -338,7 +337,7 @@
                                     </div>
                                 </form>
                                 <div class="poll-summary">
-                                    <button class="back-btn poll form-btn"><img src="../img/back.png" alt=""></button>
+                                    <button class="back-btn poll form-btn"><i class="back-icon material-icons">arrow_back</i></button>
                                     <div class="current-poll-deets">
                                         <h1 class="poll-title">Quiz title: </h1>
                                         <div class="question-deets first-deet">
@@ -375,7 +374,7 @@
 
                     <div class="content">
                         <div class="feedback-result result">
-                            <button class="invert-btn feedback back-btn"><img src="../img/back.png" alt=""></button>
+                            <button class="invert-btn feedback back-btn"><i class="back-icon material-icons">arrow_back</i></button>
                             <button class="refresh-btn"><img src="../img/refresh.png" alt=""></button>
                             <div class="feedback-result-grid">
                                 <div class="feedback-details">
@@ -426,8 +425,7 @@
                                     </div>
                                 </form>
                                 <div class="feedback-summary">
-                                    <button class="back-btn feedback form-btn"><img src="../img/back.png"
-                                            alt=""></button>
+                                    <button class="back-btn feedback form-btn"><i class="back-icon material-icons">arrow_back</i></button>
                                     <div class="current-feedback-deets">
                                         <h1 class="feedback-title">Quiz title: </h1>
                                         <div class="question-deets first-deet">
