Promises added and closing actions for exceptions

--- a/create/main2.html
+++ b/create/main2.html
@@ -216,6 +216,7 @@
                                     <div class="quiz-actions">
                                         <button id="add_question_btn" class="main-button quiz">+ Add Question</button>
                                         <button class="main-button review-btn quiz" id="">Review Quiz</button>
+                                        <button class="main-button quiz continue-quiz-btn continue-btn">Continue Quiz</button>
                                     </div>
                                 </form>
                                 <div class="quiz-summary">
@@ -334,6 +335,7 @@
                                     <div class="poll-actions">
                                         <button id="add_poll_btn" class="main-button poll">+ Add Poll Question</button>
                                         <button class="main-button review-btn poll">Review Poll</button>
+                                        <button class="main-button poll continue-poll-btn continue-btn">Continue Poll</button>
                                     </div>
                                 </form>
                                 <div class="poll-summary">
@@ -422,6 +424,7 @@
                                         <button id="add_feedback_btn" class="main-button feedback">+ Add
                                             Question</button>
                                         <button class="main-button review-btn feedback">Review Feedback</button>
+                                        <button class="main-button feedback continue-feedback-btn continue-btn">Continue Quiz</button>
                                     </div>
                                 </form>
                                 <div class="feedback-summary">
@@ -440,6 +443,7 @@
                                     <button class="invert-btn feedback main-button publish-btn"
                                         id="publish_feedback">Publish
                                         Feedback</button>
+                                        
                                 </div>
                             </div>
                             <div class="Feedback-name">
