linking of index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./participate/event.html">Link to participate in a quiz</a>
-    <a href="./create/main.html">Link to create a quiz</a>
+    <a href="./participate/event2.html">Link to participate in a quiz</a>
+    <a href="./create/main2.html">Link to create a quiz</a>
 </body>
 </html>
