fixing the adding 2 actions bug

--- a/create/main2.html
+++ b/create/main2.html
@@ -194,24 +194,13 @@
                                                     transform="translate(0 -21.333)" fill="#2784fb" /> </svg>
                                             <p class="bar-quiz-text theme-text">bar chart</p>
                                         </button>
-                                        <button class="main-button theme-btn quiz scatter scatter-quiz">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="53" height="27"
-                                                viewBox="0 0 53 27">
-                                                <g data-name="Group 115" transform="translate(0 -.44)" fill="#2784FB"
-                                                    class="scatter-quiz-white icon">
-                                                    <circle data-name="Ellipse 1" cx="4.5" cy="4.5" r="4.5"
-                                                        transform="translate(0 4.44)" />
-                                                    <circle data-name="Ellipse 2" cx="4.5" cy="4.5" r="4.5"
-                                                        transform="translate(10 4.44)" />
-                                                    <ellipse data-name="Ellipse 3" cx="4.5" cy="5" rx="4.5" ry="5"
-                                                        transform="translate(26 17.44)" />
-                                                    <circle data-name="Ellipse 4" cx="4.5" cy="4.5" r="4.5"
-                                                        transform="translate(33 10.44)" />
-                                                    <circle data-name="Ellipse 5" cx="4.5" cy="4.5" r="4.5"
-                                                        transform="translate(44 .44)" />
-                                                </g>
-                                            </svg>
-                                            <p class="scatter-quiz-text theme-text">scatter plot</p>
+                                        <button class="main-button theme-btn quiz horizontalBar scatter-quiz">
+                                            <svg id="Group_27" data-name="Group 27" xmlns="http://www.w3.org/2000/svg"
+                                                width="29.139" height="26.71" viewBox="0 0 29.139 26.71" class="hor-chart">
+                                                <path class="scatter-quiz-white icon" id="Path_61" data-name="Path 61"
+                                                    d="M28.532,45.615h-.607V21.94a.607.607,0,0,0-.607-.607H21.247a.607.607,0,0,0-.607.607V45.615H18.212v-17.6A.607.607,0,0,0,17.6,27.4H11.534a.607.607,0,0,0-.607.607v17.6H8.5V34.081a.607.607,0,0,0-.607-.607H1.821a.607.607,0,0,0-.607.607V45.615H.607A.607.607,0,0,0,0,46.222v1.214a.607.607,0,0,0,.607.607H28.532a.607.607,0,0,0,.607-.607V46.222A.607.607,0,0,0,28.532,45.615Z"
+                                                    transform="translate(0 -21.333)" fill="#2784fb" /> </svg>
+                                            <p class="scatter-quiz-text theme-text">horizontal bar</p>
                                         </button>
                                     </div>
                                     <div class="quiz-actions">
@@ -314,24 +303,13 @@
                                                     transform="translate(0 -21.333)" fill="#2784fb" /> </svg>
                                             <p class="bar-poll-text theme-text">bar graph</p>
                                         </button>
-                                        <button class="main-button theme-btn poll scatter scatter-poll">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="53" height="27"
-                                                viewBox="0 0 53 27">
-                                                <g data-name="Group 115" transform="translate(0 -.44)" fill="#2784FB"
-                                                    class="scatter-poll-white icon">
-                                                    <circle data-name="Ellipse 1" cx="4.5" cy="4.5" r="4.5"
-                                                        transform="translate(0 4.44)" />
-                                                    <circle data-name="Ellipse 2" cx="4.5" cy="4.5" r="4.5"
-                                                        transform="translate(10 4.44)" />
-                                                    <ellipse data-name="Ellipse 3" cx="4.5" cy="5" rx="4.5" ry="5"
-                                                        transform="translate(26 17.44)" />
-                                                    <circle data-name="Ellipse 4" cx="4.5" cy="4.5" r="4.5"
-                                                        transform="translate(33 10.44)" />
-                                                    <circle data-name="Ellipse 5" cx="4.5" cy="4.5" r="4.5"
-                                                        transform="translate(44 .44)" />
-                                                </g>
-                                            </svg>
-                                            <p class="scatter-poll-text theme-text">scatter plot</p>
+                                        <button class="main-button theme-btn poll horizontalBar scatter-poll">
+                                            <svg id="Group_27" data-name="Group 27" xmlns="http://www.w3.org/2000/svg"
+                                                width="29.139" height="26.71" viewBox="0 0 29.139 26.71" class="hor-chart">
+                                                <path class="scatter-poll-white icon" id="Path_61" data-name="Path 61"
+                                                    d="M28.532,45.615h-.607V21.94a.607.607,0,0,0-.607-.607H21.247a.607.607,0,0,0-.607.607V45.615H18.212v-17.6A.607.607,0,0,0,17.6,27.4H11.534a.607.607,0,0,0-.607.607v17.6H8.5V34.081a.607.607,0,0,0-.607-.607H1.821a.607.607,0,0,0-.607.607V45.615H.607A.607.607,0,0,0,0,46.222v1.214a.607.607,0,0,0,.607.607H28.532a.607.607,0,0,0,.607-.607V46.222A.607.607,0,0,0,28.532,45.615Z"
+                                                    transform="translate(0 -21.333)" fill="#2784fb" /> </svg>
+                                            <p class="scatter-poll-text theme-text">horizontal bar</p>
                                         </button>
                                     </div>
                                     <div class="poll-actions">
