--- a/create/main2.html
+++ b/create/main2.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <script>
+        if(window.innerWidth < 600){
+            vh = window.innerHeight * 0.01;
+            document.documentElement.style.setProperty('--vh', `${vh}px`);
+        }
+    </script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./css/main2.css">
     <link rel="icon" type="image/png" href="../img/favicon.png">
@@ -485,8 +491,6 @@
         if (window.innerWidth < 600) {
             const main = document.querySelector("main");
             main.style.height = window.innerHeight + "px";
-            vh = window.innerHeight * 0.01;
-            document.documentElement.style.setProperty('--vh', `${vh}px`);
         }
     </script>
     <script src="./js/main2.js"></script>
