--- a/create/main2.html
+++ b/create/main2.html
@@ -488,10 +488,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <script>
-        if (window.innerWidth < 600) {
+        /* if (window.innerWidth < 600) {
             const main = document.querySelector("main");
             main.style.height = window.innerHeight + "px";
-        }
+        } */
     </script>
     <script src="./js/main2.js"></script>
 </body>
