--- a/create/main2.html
+++ b/create/main2.html
@@ -482,9 +482,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <script>
-        if(window.innerWidth < 600){
-            vh = window.innerHeight * 0.01;
-            document.documentElement.style.setProperty('--vh', `${vh}px`);
+        if(window.innerWidth < 800){
+            nice = window.innerHeight * 0.01;
+            document.documentElement.style.setProperty('--vh', `${nice}px`);
         }
         if (window.innerWidth < 600) {
             const main = document.querySelector("main");
