--- a/participate/event2.html
+++ b/participate/event2.html
@@ -33,6 +33,7 @@
             position: relative;
             height: 100vh;
             width: 100vw;
+            height: calc(var(--vh, 1vh) * 100);
             display: grid;
             grid-template-rows: 12% 88%;
         }
@@ -105,6 +106,7 @@
             border-bottom: solid black 1px;
             margin: auto;
             margin-bottom: 6vh;
+            margin-bottom: calc(var(--vh, 1vh) * 6);
             display: block;
             padding: 10px;
             font-size: 1.2rem;
@@ -114,6 +116,7 @@
         .main-container>h1 {
             margin-top: 60px;
             margin-bottom: 8vh;
+            margin-bottom: calc(var(--vh, 1vh) * 8);
         }
 
         .active-actions {
