--- a/participate/event2.html
+++ b/participate/event2.html
@@ -35,7 +35,7 @@
             width: 100vw;
             height: calc(var(--vh, 1vh) * 100);
             display: grid;
-            grid-template-rows: 12% 88%;
+            grid-template-rows: 8% 92%;
         }
 
         .loading-gif {
@@ -133,7 +133,9 @@
             h1 {
                 font-size: 1.1rem;
             }
-
+            .header > svg{
+                height: 80%;
+            }
             input {
                 width: 70%;
             }
