mobile ui change

--- a/create/main2.html
+++ b/create/main2.html
@@ -486,10 +486,10 @@
             nice = window.innerHeight * 0.01;
             document.documentElement.style.setProperty('--vh', `${nice}px`);
         }
-        if (window.innerWidth < 600) {
+        /* if (window.innerWidth < 600) {
             const main = document.querySelector("main");
             main.style.height = window.innerHeight + "px";
-        }
+        } */
     </script>
     <script src="./js/main2.js"></script>
 </body>
